--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Quick Cash</string>
+    <string name="INVALID_PHONE_NUMBER">Invalid phone number</string>
+    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
+    <string name="INVALID_NAME">Invalid name</string>
+    <string name="INVALID_PASSWORD">Invalid password</string>
+    <string name="EMPTY_STRING"></string>
+    <string name="INVALID_ROLE">Invalid user role</string>
 </resources>
