--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="INVALID_EXPERIENCE_LEVEL">Invalid experience level</string>
     <string name="INVALID_JOB_LOCATION">Invalid job location</string>
     <string name="EMPTY_JOB_TITLE">Job title cannot be empty.</string>
+    <string name="EMPTY_JOB_COMPANY">Job company cannot be empty.</string>
     <string name="EMPTY_JOB_DESCRIPTION">Job description cannot be empty.</string>
     <string name="EMPTY_JOB_LOCATION">Job location cannot be empty.</string>
     <string name="EMPTY_JOB_INDUSTRY">Industry must be selected.</string>
