--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="EMPTY_STRING"></string>
     <string name="INVALID_JOB_TYPE">Invalid job type</string>
     <string name="INVALID_EXPERIENCE_LEVEL">Invalid experience level</string>
-    <string name="INVALID_JOB_LOCATION">Invalid job location</string>
+    <string name="INVALID_JOB_LOCATION">Invalid job location (must follow City, Province, Country)</string>
     <string name="EMPTY_JOB_TITLE">Job title cannot be empty.</string>
     <string name="EMPTY_JOB_COMPANY">Job company cannot be empty.</string>
     <string name="EMPTY_JOB_DESCRIPTION">Job description cannot be empty.</string>
