--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="INVALID_PASSWORD">Invalid password</string>
     <string name="EMPTY_STRING"></string>
     <string name="INVALID_ROLE">Invalid user role</string>
+
+    <string-array name="ROLE_VALUES">
+        <item>Select Role</item>
+        <item>Employee</item>
+        <item>Employer</item>
+    </string-array>
 </resources>
