--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,15 @@
         <item>Full-time</item>
         <item>Part-time</item>
         <item>Contract</item>
-        <item>Internship</item>
     </string-array>
 
     <string-array name="experience_levels">
         <item>Select Experience level</item>
         <item>Entry-Level</item>
+        <item>Junior</item>
         <item>Mid-Level</item>
         <item>Senior-Level</item>
+        <item>Mid-Senior Level</item>
         <item>Manager</item>
         <item>Internship</item>
     </string-array>
