--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,8 @@
     <string name="SUCCESSFUL">Login Successful!</string>
     <string name="USER_NOT_FOUND">Sorry, we could not find your account!</string>
     <string name="CHECKING_ERROR">Error checking user!</string>
-
-
-    <string name="INVALID_PHONE_NUMBER">Invalid phone number</string>
-    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
-    <string name="INVALID_NAME">Invalid name</string>
+    <string name="INVALID_PHONE_NUMBER">Invalid Phone!</string>
+    <string name="INVALID_NAME">Invalid Name!</string>
     <string name="EMPTY_STRING"></string>
 
     <!-- Values for role selection Spinner -->
