--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="CHECKING_ERROR">Error checking user!</string>
     <string name="INVALID_PHONE_NUMBER">Invalid Phone!</string>
     <string name="INVALID_NAME">Invalid Name!</string>
+    <string name="INVALID_FILE">Please select a file!</string>
 
     <!-- Values for role selection Spinner -->
     <string-array name="ROLE_VALUES">
