Implemented code to show job locations on map, and display job info on clicking a marker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
         <item>Employee</item>
         <item>Employer</item>
     </string-array>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
